Updated TrendsetterMap.html ping colors.

--- a/TrendsetterMap.html
+++ b/TrendsetterMap.html
@@ -49,12 +49,12 @@
         id: "kabuk-trendsetter-line",
         type: "line",
         source: "kabuk-trendsetter",
-        paint: { "line-color": "#F59E0B", "line-width": 3 }
+        paint: { "line-color": "#7C3AED", "line-width": 3 }
       });
 
       points.forEach(p => {
         const el = document.createElement("div");
-        el.style.background = "#F59E0B";
+        el.style.background = "#7C3AED";
         el.style.color = "#fff";
         el.style.width = "26px";
         el.style.height = "26px";
@@ -80,3 +80,4 @@
   </script>
 </body>
 </html>
+
